# sprocket

./: .codecov.yml  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  PRDOC.md  README.md  RELEASE.md  _typos.toml  cache_rs.txt  clippy.toml  config_rs.txt  deny.toml  digest_rs.txt  flake.nix  hash_rs.txt  package-lock.json  pyproject.toml  release-plz.toml  renovate.json  rustfmt.toml  sprocket-doc.md  sprocket.toml  structure.txt  style-guide.md  test.json  test_inputs.json  tomlfmt.toml
crates/: .gitattributes  .gitignore  .gitmodules  Arena.toml  CONTRIBUTING.md  Cargo.toml  Gauntlet.toml  README.md  RELEASE.md  RULES.md  deny.toml  lint-rules.md  rustfmt.toml
crates/.github/: CODEOWNERS  pull_request_template.md  reviewers.yml
crates/.github/ISSUE_TEMPLATE/: bug_report_template.md
crates/.github/workflows/: CI.yml  bump.yml  gauntlet-refresh.yml  labels.yml  pr_assign.yml  release.yml  stale.yml
crates/ci/: Cargo.toml
crates/ci/src/: main.rs
crates/gauntlet/: Arena.toml  CHANGELOG.md  Cargo.toml  Gauntlet.toml
crates/gauntlet/src/: config.rs  document.rs  lib.rs  main.rs  report.rs  repository.rs
crates/gauntlet/src/config/: inner.rs
crates/gauntlet/src/document/: identifier.rs
crates/gauntlet/src/repository/: identifier.rs  work_dir.rs
crates/sprocket-py/: Cargo.toml
crates/sprocket-py/src/: lib.rs
crates/sprocket-py/src/diagnostics/: mod.rs
crates/sprocket-py/src/grammar/: mod.rs
crates/sprocket-test-types/: CHANGELOG.md  Cargo.toml
crates/sprocket-test-types/src/: assertions.rs  inputs.rs  lib.rs  yaml.rs
crates/sprocket_py/: Cargo.toml
crates/sprocket_py/src/: lib.rs
crates/wdl/: CHANGELOG.md  Cargo.toml
crates/wdl-analysis/: CHANGELOG.md  Cargo.toml  RULES.md
crates/wdl-analysis/benches/: bench.rs
crates/wdl-analysis/src/: analyzer.rs  config.rs  diagnostics.rs  document.rs  engine.rs  eval.rs  graph.rs  handlers.rs  lib.rs  queue.rs  rayon.rs  rules.rs  scope.rs  stdlib.rs  types.rs  validation.rs  visitor.rs
crates/wdl-analysis/src/document/: v1.rs
crates/wdl-analysis/src/eval/: v1.rs
crates/wdl-analysis/src/handlers/: call_hierarchy.rs  code_lens.rs  common.rs  completions.rs  document_symbol.rs  find_all_references.rs  folding_range.rs  goto_definition.rs  hover.rs  inlay_hints.rs  rename.rs  semantic_tokens.rs  signature_help.rs  snippets.rs  workspace_symbol.rs
crates/wdl-analysis/tests/: analysis.rs  format.rs  rule_examples.rs  validation.rs  workflow_imports.rs
crates/wdl-ast/: CHANGELOG.md  Cargo.toml
crates/wdl-ast/src/: commands.rs  element.rs  experimental.rs  lib.rs  main.rs  v1.rs  validation.rs  visitor.rs
crates/wdl-ast/tests/: registry.rs  validation.rs
crates/wdl-cli/: CHANGELOG.md  Cargo.toml
crates/wdl-cli/src/: analysis.rs  eval.rs  inputs.rs  lib.rs
crates/wdl-core/: CHANGELOG.md  Cargo.toml
crates/wdl-core/src/: concern.rs  display.rs  fs.rs  lib.rs  parse.rs  str.rs  version.rs
crates/wdl-diagnostics/: CHANGELOG.md  Cargo.toml
crates/wdl-diagnostics/src/: lib.rs
crates/wdl-doc/: CHANGELOG.md  Cargo.toml  build.rs
crates/wdl-doc/src/: callable.rs  command_section.rs  config.rs  docs_tree.rs  document.rs  enum.rs  error.rs  lib.rs  meta.rs  parameter.rs  runnable.rs  struct.rs  task.rs  workflow.rs
crates/wdl-doc/tests/: README.md  doc.rs  ui.rs
crates/wdl-doc/theme/: build.mjs  package-lock.json  package.json  tailwind.config.js
crates/wdl-engine/: CHANGELOG.md  Cargo.toml
crates/wdl-engine/src/: backend.rs  cache.rs  config.rs  container_lock.rs  diagnostics.rs  digest.rs  engine.rs  eval.rs  hash.rs  http.rs  inputs.rs  lib.rs  outputs.rs  path.rs  stdlib.rs  tree.rs  units.rs  value.rs
crates/wdl-engine/tests/: inputs.rs  tasks.rs  workflows.rs
crates/wdl-format/: CHANGELOG.md  Cargo.toml  TESTING.md
crates/wdl-format/src/: config.rs  doc_comment.rs  element.rs  lib.rs  token.rs  v1.rs
crates/wdl-format/tests/: format.rs
crates/wdl-gauntlet/: CHANGELOG.md  Cargo.toml
crates/wdl-gauntlet/src/: config.rs  lib.rs  main.rs  report.rs  repository.rs
crates/wdl-grammar/: CHANGELOG.md  Cargo.toml
crates/wdl-grammar/src/: commands.rs  common.rs  core.rs  diagnostic.rs  experimental.rs  grammar.rs  lexer.rs  lib.rs  main.rs  parser.rs  tree.rs  v1.rs  version.rs
crates/wdl-grammar/tests/: diagnostic.rs  parsing.rs
crates/wdl-lint/: CHANGELOG.md  Cargo.toml  DEFINITIONS.md  RULES.md  TESTING.md
crates/wdl-lint/site-generator/: .gitignore  Cargo.toml  package-lock.json  package.json  tailwind.config.js
crates/wdl-lint/src/: baseline.rs  config.rs  except.rs  fix.rs  lib.rs  linter.rs  rules.rs  tags.rs  util.rs  v1.rs  visitor.rs
crates/wdl-lint/tests/: lints.rs  rule_examples.rs
crates/wdl-lsp/: CHANGELOG.md  Cargo.toml
crates/wdl-lsp/src/: lib.rs  proto.rs  server.rs  workspace.rs
crates/wdl-lsp/tests/: call_hierarchy.rs  code_lens.rs  common.rs  completions.rs  config_reload.rs  diagnostics.rs  find_all_references.rs  folding_range.rs  goto_definition.rs  hover.rs  rename.rs  semantic_tokens.rs  shutdown.rs  signature_help.rs  symbols.rs
crates/wdl-macros/: CHANGELOG.md  Cargo.toml
crates/wdl-macros/src/: lib.rs  test.rs
crates/wdl-modules/: CHANGELOG.md  Cargo.toml  README.md
crates/wdl-modules/src/: dependency.rs  dependency_name.rs  dependency_source.rs  hash.rs  lib.rs  license.rs  lockfile.rs  manifest.rs  module.rs  module_walk.rs  relative_path.rs  resolver.rs  signing.rs  strict_json.rs  symbolic_path.rs  tree.rs  version_requirement.rs
crates/wdl/examples/: explore.rs  parse.rs  wdl_explore.rs  wdl_view.rs
crates/wdl/src/: cli.rs  lib.rs
dev-proxy/: Cargo.toml
dev-proxy/src/: main.rs
fuzz/: Cargo.toml  README.md  common.rs
fuzz/fuzz_targets/: wdl_ast.rs  wdl_format.rs  wdl_lint.rs
sprocketup/: Cargo.toml  build.rs  install.sh  profiles.toml
sprocketup/src/: components.rs  dirs.rs  downloads.rs  init.rs  main.rs  manifest.rs  update.rs
sprocketup/src/components/: add.rs  list.rs  remove.rs
(+3291 files in other folders)
