[package]
name = "sprocket"
version = "0.16.0"
description = "A command line tool for working with Workflow Description Language (WDL) documents"
authors = ["The Sprocket project contributors"]
license = "MIT OR Apache-2.0"
edition = "2024"
homepage = "https://sprocket.bio"
repository = "https://github.com/stjude-rust-labs/sprocket"
documentation = "https://sprocket.bio/overview.html"
readme = "README.md"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive", "string"] }
clap-verbosity-flag = { version = "3.0.3", features = ["tracing"] }
clap_complete = "4.5.55"
cloud-copy = { version = "0.3.0", features = ["cli"] }
codespan-reporting = "0.12.0"
colored = "3.0.0"
crankshaft = { version = "0.5.0", features = ["docker"] }
dirs = "6.0.0"
figment = { version = "0.10.19", features = ["toml"] }
futures = "0.3.31"
git-testament = "0.2.6"
indexmap = "2.11.0"
indicatif = "^0.18.0"
nonempty = "0.12.0"
opener = "0.8.2"
pest = { version = "2.8.1", features = ["pretty-print"] }
pretty_assertions = "1.4.1"
serde = "1.0.219"
serde_json = { version = "1.0.141", features = ["preserve_order"] }
serde_yaml_ng = "0.10.0"
similar = "2.7.0"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.47.0", features = ["full"] }
tokio-util = "0.7.15"
toml = "0.9.5"
tracing = "0.1.41"
tracing-indicatif = "0.3.12"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
walkdir = "2.5.0"
wdl = { version = "0.18.0", features = ["cli", "codespan", "engine", "lsp", "doc"] }

[dev-dependencies]
shlex = "1.3.0"
tempfile = "3.21.0"
walkdir = "2.5.0"

[[test]]
name = "cli"
harness = false
