[workspace]
members = [
    "crates/gauntlet",
    "crates/wdl",
    "crates/wdl-analysis",
    "crates/wdl-ast",
    "crates/wdl-doc",
    "crates/wdl-engine",
    "crates/wdl-format",
    "crates/wdl-grammar",
    "crates/wdl-lint",
    "crates/wdl-lsp",
]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"
authors = ["The Sprocket project contributors"]
homepage = "https://sprocket.bio"
repository = "https://github.com/stjude-rust-labs/sprocket"
rust-version = "1.91.1"

[workspace.dependencies]
ammonia = "4.1.2"
anyhow = "1.0.100"
approx = "0.5.1"
arrayvec = { version = "0.7.6", features = ["serde"] }
async-trait = "0.1.89"
axum = "0.8.8"
bimap = "0.6.3"
blake3 = { version = "1.8.3", features = ["mmap"] }
bon = "3.8.2"
bytesize = { version = "2.3.1", features = ["serde"] }
chrono = "0.4.43"
clap = { version = "4.5.57", features = ["derive", "string"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
clap_complete = "4.5.65"
cloud-copy = { version = "0.7.0", features = ["cli"] }
codespan-reporting = "0.13.1"
colored = "3.1.1"
convert_case = "0.11.0"
crankshaft = { version = "0.9.0", features = ["docker"] }
criterion = "0.8.2"
dirs = "6.0.0"
faster-hex = "0.10.0"
figment = { version = "0.10.19", features = ["toml", "yaml"] }
fs_extra = "1.3.0"
ftree = "1.3.0"
futures = "0.3.31"
git-testament = "0.2.6"
git2 = "0.20.4"
globset = "0.4.18"
ignore = "0.4.25"
indexmap = { version = "2.13.0", features = ["serde"] }
indicatif = "0.18.3"
itertools = "0.14.0"
libc = "0.2"
libtest-mimic = "^0.8.1"
line-index = "0.1.2"
logos = "0.16.1"
lsp-types = "0.94.1"
macropol = "0.1.4"
maud = "0.27.0"
nonempty = "0.12.0"
notify = "8.2.0"
num_enum = "0.7.5"
opener = "0.8.4"
ordered-float = "5.1.0"
parking_lot = "0.12.5"
paste = "1.0.15"
path-clean = "1.0.1"
pathdiff = "0.2.3"
peak_alloc = "0.3.0"
petgraph = "0.8.3"
petname = { version = "2.0.2", features = ["default-rng", "default-words"] }
pretty_assertions = "1.4.1"
pulldown-cmark = "0.13.0"
rand = "0.9.2"
rayon = "1.11.0"
regex = "1.12.3"
reqwest = { version = "0.13.1", default-features = false, features = [
    "rustls",
    "http2",
    "charset",
] }
rev_buf_reader = "0.3.0"
rowan = "0.16.1"
secrecy = "0.10.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_with = "3.16.1"
serde_yaml_ng = "0.10.0"
shellexpand = "3.1.1"
shlex = "1.3.0"
similar = "2.7.0"
smallvec = "1.15.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono", "uuid", "migrate"] }
strsim = "0.11.1"
strum = { version = "0.27", features = ["derive"] }
sysinfo = "0.38.0"
tempfile = "3.24.0"
thirtyfour = "0.36.1"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-retry2 = "0.9.1"
tokio-util = "0.7.18"
toml = "0.9.11"
toml_edit = { version = "0.24.0", features = ["serde"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tower-lsp = "0.20.0"
tracing = "0.1.44"
tracing-indicatif = "0.3.14"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-test = "0.2.5"
url = "2.5.8"
urlencoding = "2.1.3"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
uuid = { version = "1.20.0", features = ["serde", "v4"] }
walkdir = "2.5.0"
wdl = { version = "0.22.2", path = "crates/wdl", features = ["engine", "lint", "lsp", "doc"] }
which = "8.0.0"
whoami = "2.1.0"
zip = { version = "8.1.0", default-features = false, features = [] }

[workspace.lints.rust]
missing_docs = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docker_tests_disabled)'] }

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"

[workspace.lints.clippy]
missing_docs_in_private_items = "warn"
# An explicit `new()` method offers a prominent and discoverable spot to hang documentation for what
# constitutes a zero-configuration value of a particular type, and its uses are easier to find with
# tooling like `rust-analyzer`. `Default` should be used when trait dispatch is actually helpful or
# necessary to interact with a library.
#
# Ref: https://rust-lang.github.io/rust-clippy/master/index.html#new_without_default
new_without_default = "allow"

[package]
name = "sprocket"
version = "0.22.0"
description = "A command line tool for working with Workflow Description Language (WDL) documents"
authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://sprocket.bio/overview.html"
readme = "README.md"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bon.workspace = true
chrono.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
clap_complete.workspace = true
cloud-copy.workspace = true
codespan-reporting.workspace = true
colored.workspace = true
crankshaft.workspace = true
dirs.workspace = true
figment.workspace = true
futures.workspace = true
git-testament.workspace = true
indexmap.workspace = true
indicatif.workspace = true
itertools.workspace = true
nonempty.workspace = true
opener.workspace = true
path-clean.workspace = true
pathdiff.workspace = true
peak_alloc.workspace = true
petname.workspace = true
pretty_assertions.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
shellexpand.workspace = true
similar.workspace = true
sqlx.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-indicatif.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true
walkdir.workspace = true
wdl.workspace = true
whoami.workspace = true

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
http-body-util = "0.1.3"
libtest-mimic.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
shlex.workspace = true
tempfile.workspace = true
walkdir.workspace = true
zip.workspace = true

[lints]
workspace = true

[[test]]
name = "cli"
harness = false

[[bench]]
name = "bench"
harness = false
