[workspace]
members = [
    "ci",
    "gauntlet",
    "wdl",
    "wdl-analysis",
    "wdl-ast",
    "wdl-cli",
    "wdl-doc",
    "wdl-engine",
    "wdl-format",
    "wdl-grammar",
    "wdl-lint",
    "wdl-lsp",
]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"
authors = ["The Rust WDL project developers"]
homepage = "https://github.com/stjude-rust-labs/wdl"
repository = "https://github.com/stjude-rust-labs/wdl"
rust-version = "1.88.0"

[workspace.dependencies]
ammonia = "4.1.0"
anyhow = "1.0.98"
approx = "0.5.1"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.3", features = ["tracing"] }
codespan-reporting = "0.12.0"
colored = "3.0.0"
convert_case = "0.8.0"
crankshaft = "0.5.0"
dirs = "6.0.0"
faster-hex = "0.10.0"
fs_extra = "1.3.0"
ftree = "1.2.0"
futures = "0.3.31"
git2 = "0.20.2"
glob = "0.3.2"
http-cache-stream-reqwest = "0.1.0"
ignore = "0.4.23"
indexmap = { version = "2.11.0", features = ["serde"] }
indicatif = "0.18.0"
itertools = "0.14.0"
libc = "0.2"
libtest-mimic = "^0.8.1"
line-index = "0.1.2"
logos = "0.15.0"
lsp-types = "0.94.1"
macropol = "0.1.3"
maud = "0.27.0"
nonempty = "0.12.0"
notify = "8.2.0"
opener = "0.8.1"
ordered-float = "5.0.0"
parking_lot = "0.12.3"
paste = "1.0.15"
path-clean = "1.0.1"
pathdiff = "0.2.3"
petgraph = "0.8.1"
pretty_assertions = "1.4.1"
pulldown-cmark = "0.13.0"
rand = "0.9.1"
rayon = "1.11.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = [
    "rustls-tls",
    "http2",
    "charset",
] }
reqwest-middleware = "0.4.2"
rev_buf_reader = "0.3.0"
rowan = "0.16.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.14.0"
serde_yaml_ng = "0.10.0"
shellexpand = "3.1.1"
strsim = "0.11.1"
sysinfo = "0.37.0"
tempfile = "3.21.0"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.15"
toml = "0.9.5"
toml_edit = { version = "0.23.4", features = ["serde"] }
tower-lsp = "0.20.0"
tracing = "0.1.41"
tracing-indicatif = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
urlencoding = "2.1.3"
uuid = "1.18.0"
walkdir = "2.5.0"

[workspace.lints.rust]
missing_docs = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"

[workspace.lints.clippy]
missing_docs_in_private_items = "warn"
# An explicit `new()` method offers a prominent and discoverable spot to hang documentation for what
# constitutes a zero-configuration value of a particular type, and its uses are easier to find with
# tooling like `rust-analyzer`. `Default` should be used when trait dispatch is actually helpful or
# necessary to interact with a library.
#
# Ref: https://rust-lang.github.io/rust-clippy/master/index.html#new_without_default
new_without_default = "allow"
