[package]
name = "sprocket-dev-proxy"
description = "Proxy binary for invoking local development versions of sprocket"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
tempfile.workspace = true

[lints]
workspace = true
