[package]
name = "sprocketup"
version = "0.1.0"
description = "Sprocket version manager CLI."
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
clap-cargo.workspace = true
dirs.workspace = true
faster-hex.workspace = true
flate2.workspace = true
futures.workspace = true
indicatif.workspace = true
serde.workspace = true
reqwest = { workspace = true, features = ["rustls", "stream"] }
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url = { workspace = true, features = ["serde"] }
zip.workspace = true

[lints]
workspace = true
