[package]
name = "ci"
version = "0.1.0"
publish = false
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono = "0.4.39"
tokio.workspace = true
clap.workspace = true
reqwest.workspace = true
toml.workspace = true
toml_edit = { version = "0.22.23", features = ["serde"] }

[lints]
workspace = true
