[package]
name = "gauntlet"
version = "0.5.0"
publish = false
description = "Testing of parse trees and ASTs within the `wdl` family of crates"
rust-version.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wdl = { path = "../wdl", version = "0.10.0", features = ["codespan", "analysis"] }
clap.workspace = true
colored.workspace = true
dirs.workspace = true
faster-hex.workspace = true
git2.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_with.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
codespan-reporting.workspace = true

[lints]
workspace = true
