[package]
name = "gauntlet"
version = "0.5.0"
publish = false
description = "Testing of parse trees and ASTs within the `wdl` family of crates"
authors.workspace = true
rust-version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
wdl = { path = "../wdl", version = "0.13.2", features = ["codespan", "analysis"] }

anyhow.workspace = true
clap.workspace = true
codespan-reporting.workspace = true
colored.workspace = true
dirs.workspace = true
faster-hex.workspace = true
git2.workspace = true
indexmap.workspace = true
serde_with.workspace = true
serde.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[lints]
workspace = true
