[package]
name = "wdl-analysis"
version = "0.4.0"
rust-version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Analysis of Workflow Description Language (WDL) documents."
documentation = "https://docs.rs/wdl-analysis"

[dependencies]
wdl-ast = { path = "../wdl-ast", version = "0.8.0" }
anyhow = { workspace = true }
rowan = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
petgraph = { workspace = true }
futures = { workspace = true }
path-clean = { workspace = true }
indexmap = { workspace = true }
line-index = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
walkdir = { workspace = true }
id-arena = { workspace = true }
tracing = { workspace = true }
convert_case = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
colored = { workspace = true }
codespan-reporting = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
codespan = ["wdl-ast/codespan"]

[lints]
workspace = true

[[test]]
name = "analysis"
required-features = ["codespan"]
harness = false
