[package]
name = "wdl-analysis"
version = "0.10.0"
rust-version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Analysis of Workflow Description Language (WDL) documents."
documentation = "https://docs.rs/wdl-analysis"

[dependencies]
wdl-ast = { path = "../wdl-ast", version = "0.14.0" }
wdl-format = { path = "../wdl-format", version = "0.8.0" }

anyhow = { workspace = true }
convert_case = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
line-index = { workspace = true }
parking_lot = { workspace = true }
path-clean = { workspace = true }
petgraph = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rowan = { workspace = true }
serde = { workspace = true, features = ["rc"] }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
walkdir = { workspace = true }
lsp-types = "0.94.1"

[dev-dependencies]
codespan-reporting = { workspace = true }
colored = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
codespan = ["wdl-ast/codespan"]

[lints]
workspace = true

[[test]]
name = "analysis"
required-features = ["codespan"]
harness = false

[[test]]
name = "validation"
required-features = ["codespan"]
harness = false
