[package]
name = "wdl-ast"
version = "0.16.0"
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
description = "An abstract syntax tree for Workflow Description Language (WDL) documents"
homepage = "https://github.com/stjude-rust-labs/wdl"
repository = "https://github.com/stjude-rust-labs/wdl"
documentation = "https://docs.rs/wdl-ast"

[dependencies]
wdl-grammar = { path = "../wdl-grammar", version = "0.16.0" }

macropol = "0.1.3"
paste = "1.0.15"
rowan = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
codespan-reporting = { workspace = true }
colored = { workspace = true }
pretty_assertions = { workspace = true }
rayon = { workspace = true }

[features]
codespan = ["wdl-grammar/codespan"]

[lints]
workspace = true
