[package]
name = "wdl-ast"
version = "0.18.0"
description = "An abstract syntax tree for Workflow Description Language (WDL) documents"
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository = "https://github.com/stjude-rust-labs/sprocket/tree/main/crates/wdl-ast"
documentation = "https://docs.rs/wdl-ast"

[dependencies]
macropol = { workspace = true }
paste = { workspace = true }
rowan = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
wdl-grammar = { path = "../wdl-grammar", version = "0.18.0" }

[dev-dependencies]
approx = { workspace = true }
codespan-reporting = { workspace = true }
colored = { workspace = true }
pretty_assertions = { workspace = true }
rayon = { workspace = true }

[lints]
workspace = true
